fix - Fixing an about component styling on mobile and table sizes

--- a/src/sections/about/style.css
+++ b/src/sections/about/style.css
@@ -1,6 +1,6 @@
 .about {
   position: relative;
-  padding-bottom: 12rem;
+  margin-bottom: 12rem;
 }
 
 .about__descr {
@@ -11,14 +11,14 @@
   text-align: center;
 }
 
-.about__section {
+/* .about__section {
   margin-top: 3rem;
   padding-top: 2rem;
   padding-left: 2rem;
   padding-right: 2rem;
   padding-bottom: 3rem;
   box-shadow: var(--box-shadow);
-}
+} */
 
 .about__wrapper {
   display: flex;
@@ -84,14 +84,14 @@
   }
 }
 
-@media screen and (max-width: 688px) {
+@media screen and (max-width: 768px) {
   .about {
-    padding-bottom: 8rem;
+    margin-bottom: 8rem;
   }
 
-  .about__right {
+  /* .about__right {
     display: none;
-  }
+  } */
 
   .about__greeting {
     font-size: 2.2rem;
@@ -112,6 +112,17 @@
 
 @media (max-width: 36rem) {
   .about {
-    padding-bottom: 6rem;
+    margin-bottom: 6rem;
+  }
+
+  .about__image {
+    width: 343px;
+    height: 343px;
+  }
+}
+
+@media screen and (max-width: 375px) {
+  .about {
+    margin-bottom: 4rem;
   }
 }
